# Chaos-Attractors

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  Makefile  README.md  aizawa.cpp  main.cpp  matrixcheck  matrixcheck.cpp
config/: attractors.json
helpers/: matrix.cpp  test.cpp
reference/: ref.cpp  references.txt
src/: aizawa.cpp  lorenzattractor.cpp  main.cpp
src/includes/: matrix.h
src/includes/attractors/: aizawa.cpp  aizawa.h  attractors.h  base_attractor.h  halvorsen.cpp  halvorsen.h  lorenz.cpp  lorenz.h  sprott.cpp  sprott.h  thomas.cpp  thomas.h
